Fixed spacing problem for fields in full node view.

--- a/src/sites/all/themes/acquia_marina_istc/css/fusion-acquia-marina-style.css
+++ b/src/sites/all/themes/acquia_marina_istc/css/fusion-acquia-marina-style.css
@@ -1477,7 +1477,7 @@ td {
   margin: 0;
 }
 
-.full-node .field-label{
+.full-node .field{
     padding-top: 20px;
 }
 
